manifests/overlays/dev/ingress-patches.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mvp-springboot-jdk17
spec:
  ingressClassName: nginx
  rules:
  - host: mvp-springboot-jdk17-dev.20.249.190.36.nip.io
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: mvp-springboot-jdk17
            port:
              number: 8080
